--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <!-- <a class="dropdown-item" href="#navhw0">HW0 Python 101</a> -->
-                  <a class="dropdown-item disabled" href="#">HW1 Linear Regression</a>
-                  <a class="dropdown-item disabled" href="#">HW2 Logistic Regression</a>
-                  <a class="dropdown-item disabled" href="#">HW3 CNN</a>
+                  <a class="dropdown-item disabled" href="#hw1">HW1 Linear Regression</a>
+                  <a class="dropdown-item disabled" href="#hw2">HW2 Logistic Regression</a>
+                  <a class="dropdown-item disabled" href="#hw3">HW3 CNN</a>
+                  <a class="dropdown-item disabled" href="#hw4">HW4 RNN</a>
+                  <a class="dropdown-item disabled" href="#hw5">HW5 Image clustering</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item disabled" href="#">Comming Soon... KEKW</a>
+                  <a class="dropdown-item disabled" href="#">Comming Soon...</a>
                 </div>
               </li>
             </ul>
