--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
   			<div class="row justify-content-around row-offset-2">
   				<figure class="gallery_member col-md-2 col-sm-2 col-xs-5 filter hdpe">
-  		      <img src="https://graph.facebook.com/v2.2/100012914590751/picture?type=large" class="img-thumbnail">
+  		      <img src="https://drive.google.com/file/d/14cbsd5xb7MBoDyO6euxxnd3CHFibbhma/preview" class="img-thumbnail">
   					<figcaption>
   				    <h3> 李吉昌 </h3>
   						<p>
