--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   				  </figcaption>
   		    </figure>
           <figure class="gallery_member col-md-2 col-sm-2 col-xs-5 filter hdpe">
-  		      <img src="https://graph.facebook.com/v2.2/100002751304554/picture?type=large" class="img-thumbnail">
+  		      <img src="https://drive.google.com/uc?export=view&id=1AbYFd26ucmkfHU9T-_F1JnOf-oCNczDa" class="img-thumbnail">
   					<figcaption>
   				    <h3> 李宗倫 </h3>
   						<p>
@@ -107,7 +107,7 @@
   				  </figcaption>
   		    </figure>
           <figure class="gallery_member col-md-2 col-sm-2 col-xs-5 filter hdpe">
-  		      <img src="https://graph.facebook.com/v2.2/100000487461254/picture?type=large" class="img-thumbnail">
+  		      <img src="https://drive.google.com/uc?export=view&id=1DnfZNsHMLIe28yW86xofHbPdrHJvydYH" class="img-thumbnail">
   					<figcaption>
   				    <h3> 李彥儒 </h3>
   						<p>
@@ -116,7 +116,7 @@
   				  </figcaption>
   		    </figure>
           <figure class="gallery_member col-md-2 col-sm-2 col-xs-5 filter hdpe">
-  		      <img src="https://graph.facebook.com/v2.2/100000197921547/picture?type=large" class="img-thumbnail">
+  		      <img src="https://drive.google.com/uc?export=view&id=1yvLBwC9v2gbWw-AQWkUjpt9ZzyniYeLI" class="img-thumbnail">
   					<figcaption>
   				    <h3> 舒泓諭 </h3>
   						<p>
