--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                   <h5 class="text-left"> 【HW1】Linear Regression </h5>
                   <hr />
                   <div class="collapse" id="hw1">
-                    <p class="text-justify"> PM 2.5 預測 </p>
+                    <p class="text-justify">  </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw1">
@@ -337,35 +337,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="https://drive.google.com/file/d/1Wa3pq_FZfUFa0pP3kt3UQe3gLExcOmSb/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://www.kaggle.com/t/056894695ae045cf82e51536a48ada67">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="https://drive.google.com/file/d/1m0LRSjlRlnuFimGVJW6yX1dSwxwF-A0C/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="https://hackmd.io/@ASZWRvp7SjOEdYLqF3JYdg/Bk6mgvOHv">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="https://github.com/mlta2020fall/ml-Web/blob/master/srcs/hw1/hw1-sampleCode.ipynb">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
@@ -379,7 +379,7 @@
                   <h5 class="text-left"> 【HW2】Logistic Regression </h5>
                   <hr />
                   <div class="collapse" id="hw2">
-                    <p class="text-justify"> Income Prediction </p>
+                    <p class="text-justify">  </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw2">
@@ -387,35 +387,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="https://drive.google.com/file/d/1caYqRXXumREoJN2o6009oRHmNZc_2MBT/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://www.kaggle.com/t/a1c06e525181466490d3ead92bf75292">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="https://drive.google.com/file/d/1MaQFfxpnbDCfEkF1iij2aVJIYZT-GowJ/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="https://hackmd.io/@ASZWRvp7SjOEdYLqF3JYdg/H1T98sSvD">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="https://github.com/mlta2020fall/ml-Web/blob/master/srcs/hw2/hw2-sampleCode.ipynb">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
@@ -429,7 +429,7 @@
                   <h5 class="text-left"> 【HW3】CNN </h5>
                   <hr />
                   <div class="collapse" id="hw3">
-                    <p class="text-justify"> Face Expression Prediction </p>
+                    <p class="text-justify"> </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw3">
@@ -437,35 +437,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="https://drive.google.com/file/d/1xDYOyxn17WcW36fQGNLtyEKi5FtyqJ2e/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://www.kaggle.com/t/5ad2191ed8634eacbb45fa4b7626c981">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="https://drive.google.com/file/d/18Bhem8b2KMObzDgdrz7th4iCY170R-S_/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="https://hackmd.io/@ASZWRvp7SjOEdYLqF3JYdg/HJMbtPOdD?fbclid=IwAR0uf_yc4tQ6_4Qpb4Nr-RtCNs0tcGD3dSTakFLiXLwgeSJOYKiDVCX9C-o">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="https://github.com/mlta2020fall/ml-Web/blob/master/srcs/hw3/hw3-sampleCode.ipynb">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
@@ -479,7 +479,7 @@
                   <h5 class="text-left"> 【HW4】 RNN </h5>
                   <hr />
                   <div class="collapse" id="hw4">
-                    <p class="text-justify">Text Sentiment Classification </p>
+                    <p class="text-justify">  </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw4">
@@ -487,35 +487,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="https://docs.google.com/presentation/d/1lcYelqjpeT4miFoDLZPCFkdQKZ7YGTeh89Cvs6lrqqg/edit?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://www.kaggle.com/c/ml2020fall-hw4-3">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="https://reurl.cc/Q3Z9gp">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="https://drive.google.com/file/d/1fEu87banB4s6Yjku1dA5sMcnwCugEPBF/view?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="https://reurl.cc/v1Kyp1">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
@@ -529,7 +529,7 @@
                   <h5 class="text-left"> 【HW5】 Image clustering </h5>
                   <hr />
                   <div class="collapse" id="hw5">
-                    <p class="text-justify"> Image clustering </p>
+                    <p class="text-justify">  </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw5">
@@ -537,35 +537,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="https://docs.google.com/presentation/d/1pXmGbbkaAt12tfBD540_trlrcFFMQXahHcE67ItUCEY/edit?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://www.kaggle.com/c/ml2020fall-hw5-1/overview">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="https://docs.google.com/document/d/1mts0RLtxMRiKscXSE0tFC_A3GOFcCEvn0yZ_mtO5eIU/edit?usp=sharing">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="https://drive.google.com/file/d/1-rmlFaIj_6hEfJGOHLKUxInoKMsKLHLf/view">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="https://classroom.github.com/a/d0bIiREB">
+                    <a href="">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
