add fb group link

--- a/index.html
+++ b/index.html
@@ -607,6 +607,11 @@
     						<i class="fas fa-envelope"></i> 助教信箱 <br />
     						ntueemlta2021 [AT] gmail.com
     					</p>
+              <!-- XXX: FB Group -->
+    					<p>
+    						<i class="fas fa-bookmark"></i> FB社團 <br />
+    						<a href="https://www.facebook.com/groups/1029900681122058">Machine Learning(2021, fall)</a>
+    					</p>
     				</div>
     			</div>
     		</div>
