--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </a>
                     <a href="https://drive.google.com/drive/folders/1-iHwvCefqNQCySxwoohmYbpePZq7wqoR?usp=sharing">
                       <button class="btn btn-outline-secondary btn-sm">
-                        <i class="far fa-camera"></i>
+                        <i class="fa fa-camera"></i>
                          Video
                       </button>
                     </a>
