--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                          Regression
                       </button>
                     </a>
-                    <a href="https://drive.google.com/drive/folders/1-iHwvCefqNQCySxwoohmYbpePZq7wqoR?usp=sharing">
+                    <a href="https://drive.google.com/drive/folders/1-iHwvCefqNQCySxwoohmYbpePZq7wqoR?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
                          Video
