--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       			<p>
               吳沛遠
       			</p>
+            <h5> <font color="red">加簽結果已於9/28全數寄出，請同學確認信箱是否有收到！</font> </h5>
           </div>
       	</div>
       </div>
