--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
               </li>
               <li class="list-group-item" id="week02">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 02 </h5>
+                  <h5 class="text-left"> Weeok 02 上課連結：https://u.cyberlink.com/live/986813351264783004
+網路研討會 ID：915-484-596 </h5>
                   <hr />
                   <!-- <div class="collapse" id="hw1">
                     <p class="text-justify"> PM 2.5 預測 - Coming Soon </p>
