--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
                          Logistic Regression
                       </button>
                     </a>
+                    <a href="https://drive.google.com/drive/folders/1jGBuc7pZehO_9FMdTL1ahfTVIGp5aoj2?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
                   </p>
                 </div>
               </li>
