--- a/index.html
+++ b/index.html
@@ -349,35 +349,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/1XyeZkjYJC3ERQ1VzUfbzu3UdpEwav1FR/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/1XyeZkjYJC3ERQ1VzUfbzu3UdpEwav1FR/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="">
+                    <a href="https://docs.google.com/document/d/12V-wN_4nn0oKc2T07JeYmtvvhvK2M4E4/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="">
+                    <a href="https://hackmd.io/@GfOkB4kgS66YhhM7j6TJew/BykqpjhEK" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="">
+                    <a href="https://colab.research.google.com/drive/1GC7OJSyPdA0aTioI45g7arnnqheh166b?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
