--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                   <h5 class="text-left"> 【HW1】Linear Regression </h5>
                   <hr />
                   <div class="collapse" id="hw1">
-                    <p class="text-justify">  </p>
+                    <p class="text-justify"> PM2.5 Prediction </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw1">
