--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="https://docs.google.com/presentation/d/1XyeZkjYJC3ERQ1VzUfbzu3UdpEwav1FR/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
+                    <a href="https://www.kaggle.com/t/6b77e6ea14df4ea6badc0774b2c1ce23" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
