--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
               Machine Learning 2021 FALL
               <!-- <img src="./images/pepeFrog.png" class="img-course" alt=""> -->
             </h5>
+            <h5>
+              第三週起本課程採實體線上並行，同學可於上課時間至原教室或加入線上會議室。
+            </h5>
       			<p>
               吳沛遠
       			</p>
