--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                   <h5 class="text-left"> 【HW2】Logistic Regression </h5>
                   <hr />
                   <div class="collapse" id="hw2">
-                    <p class="text-justify">  </p>
+                    <p class="text-justify"> Income 50K prediction </p>
                   </div>
                   <p class="text-right">
                     <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#hw2">
@@ -408,35 +408,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/1GoDUDGcJyKm6hFjGACtsk2WW85ZTFUOO/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="">
+                    <a href="https://www.kaggle.com/t/93e214f8b5b64978a9e03c923dfd3e8f" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="">
+                    <a href="https://docs.google.com/document/d/1y_5H041452Qu5OtYcFEVK_yAcaFVmc_e6daUv5bLwzE/edit?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="">
+                    <a href="https://hackmd.io/@GfOkB4kgS66YhhM7j6TJew/BJ-wGv8HY" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="">
+                    <a href="https://drive.google.com/drive/folders/1mSNn4AIx6-2T8FpuZ-V8OIRl3l6vUpn1?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
