--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
               Machine Learning 2021 FALL
               <!-- <img src="./images/pepeFrog.png" class="img-course" alt=""> -->
             </h5>
-            <h5>
-              第三週起本課程採實體線上並行，同學可於上課時間至原教室或加入線上會議室。
-            </h5>
+            
       			<p>
               吳沛遠
       			</p>
@@ -268,6 +266,12 @@
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          CNN
+                      </button>
+                    </a>
+                    <a href="https://drive.google.com/drive/folders/12E01_r7CN7PDoDaYAtRbzw5TgDlZRKkj?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
                       </button>
                     </a>
                   </p>
