--- a/index.html
+++ b/index.html
@@ -468,35 +468,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/10CcyjvssSeIxJMpHHcRhuCOQ930EXL0d/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="">
+                    <a href="https://www.kaggle.com/t/89e76f1cd72e4f608c0394eded88dd00" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="">
+                    <a href="https://docs.google.com/document/d/1KoGQMQL8xyo9pXN6HEfGgxgwOjXcK3v4/edit?usp=sharing&ouid=102528209626787107677&rtpof=true&sd=true" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="">
+                    <a href="https://hackmd.io/@GfOkB4kgS66YhhM7j6TJew/SJy_akYUK" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="">
+                    <a href="" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
