--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="" target="_blank">
+                    <a href="https://drive.google.com/file/d/10Q-K9rrcC9EolQgS-wZdS2byp0XhsLVz/view?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
