--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@
                          TSNE
                       </button>
                     </a>
+                    <a href="https://youtube.com/playlist?list=PLxk9aIYXCa9czvYZSo1p3AlR9ydXyfJ29" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
                   </p>
                 </div>
               </li>
