--- a/index.html
+++ b/index.html
@@ -271,7 +271,13 @@
                     <a href="https://drive.google.com/drive/folders/12E01_r7CN7PDoDaYAtRbzw5TgDlZRKkj?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
-                         Video
+                         Video(PCA)
+                      </button>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=OP5HcXJg2Aw&list=PLJV_el3uVTsMhtt7_Y6sgTHGHp1Vb2P2J&index=9" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(CNN)
                       </button>
                     </a>
                   </p>
