--- a/index.html
+++ b/index.html
@@ -329,6 +329,38 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item" id="week07">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Weeok 07 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         RNN
+                      </button>
+                    </a>
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Ensemble
+                      </button>
+                    </a>
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(RNN)
+                      </button>
+                    </a>
+                    <a href="https://youtu.be/tH9FH1DH5n0" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(Ensemble)
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
