--- a/index.html
+++ b/index.html
@@ -334,22 +334,28 @@
                   <h5 class="text-left"> Weeok 07 </h5>
                   <hr />
                   <p class="text-right">
-                    <a href="">
+                    <a href="./slides/W8a_RNN.pdf">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          RNN
                       </button>
                     </a>
-                    <a href="">
+                    <a href="./slides/W7a_Ensemble.pdf">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Ensemble
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://youtu.be/xCGidAeyS4M" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
-                         Video(RNN)
+                         Video(RNN-1)
+                      </button>
+                    </a>
+                    <a href="https://youtu.be/rTqmWlnwz_0" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(RNN-2)
                       </button>
                     </a>
                     <a href="https://youtu.be/tH9FH1DH5n0" target="_blank">
