--- a/index.html
+++ b/index.html
@@ -364,6 +364,12 @@
                          Video(Ensemble)
                       </button>
                     </a>
+                    <a href="https://youtu.be/tH9FH1DH5n0" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(Class)
+                      </button>
+                    </a>
                   </p>
                 </div>
               </li>
