--- a/index.html
+++ b/index.html
@@ -661,6 +661,56 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item">
+                <div class="w-100 justify-content-between" id="navhw3">
+                  <h5 class="text-left"> 【Final Project】 </h5>
+                  <hr />
+                  <div class="collapse" id="final_project">
+                    <p class="text-justify">  </p>
+                  </div>
+                  <p class="text-right">
+                    <button class="btn btn-outline-info btn-sm" data-toggle="collapse" data-target="#final_project">
+                      <i class="fas fa-info-circle"></i>
+                       INFO
+                    </button>
+                    <!-- Google Sheets -->
+                    <a href="https://docs.google.com/presentation/d/1Ss22llEwSb4owsVQAZeZwDV43wKv92fILFT20u9DKnI/edit?fbclid=IwAR0yvUH-CpmWQurgNx2Wvd4TJWN0md-VU2E4Wf-L-qftJ1sHrllrxIMkjQg#slide=id.g365706914f_0_57" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Slide
+                      </button>
+                    </a>
+                    <!-- Kaggle -->
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Kaggle
+                      </button>
+                    </a>
+                    <!-- Report -->
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Report
+                      </button>
+                    </a>
+                    <!-- HackMD -->
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Math
+                      </button>
+                    </a>
+                    <!-- ipyth on Github -->
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fab fa-github"></i>
+                         CODE
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
