--- a/index.html
+++ b/index.html
@@ -373,6 +373,32 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item" id="week08">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Weeok 08 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="https://drive.google.com/file/d/1TYy_9asdVpkJfjTcyw6zPHONKbaB_af3/view?usp=sharing">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         GMM & EM
+                      </button>
+                    </a>
+                    <a href="">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         
+                      </button>
+                    </a>
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
