add gradient boosting

--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@
                          Ensemble
                       </button>
                     </a>
+                    <a href="./slides/gradient boosting.pdf">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Ensemble
+                      </button>
+                    </a>
                     <a href="https://youtu.be/xCGidAeyS4M" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
