--- a/index.html
+++ b/index.html
@@ -600,35 +600,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/1zXLUlyf_4lgr-AnRntUAN9kFEqri1OWujdycv9f_Qx4/edit?usp=sharing">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="">
+                    <a href="http://www.kaggle.com/c/ml-2021fall-hw4">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="">
+                    <a href="https://docs.google.com/document/d/1mjawi2jtHhBrnxluXZ-Q2pNbh8YWuAm4HK3H6Khgoc8/edit?usp=sharing">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="">
+                    <a href="https://hackmd.io/@hAe95tLdTVqEePbZsJyqrw/BkWSTuqPF">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="">
+                    <a href="https://drive.google.com/file/d/1dJIB6Sbd_T_S7HsP0pDfLQKYaxnARG1g/view?usp=sharing">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
